fixed the overflow issue

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -9,6 +9,7 @@ body {
   background-color: $backgroundColor;
   color: $textColor;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 h1 {
